개인정보처리방침

--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -45,7 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     ads:adSize="BANNER"
-                    ads:adUnitId="@string/ad_id_test">
+                    ads:adUnitId="@string/ad_id">
                 </com.google.android.gms.ads.AdView>
 
             </LinearLayout>
