--- a/app/src/main/res/anim/slidein.xml
+++ b/app/src/main/res/anim/slidein.xml
@@ -1,8 +1,7 @@
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
-    <translate
-        android:duration="500"
-        android:fromXDelta="100%p"
-        android:toXDelta="0"
-        android:repeatCount="1"
-        android:repeatMode="reverse"/>
-</set>
+<?xml version="1.0" encoding="utf-8"?>
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="1000"
+    android:fromXDelta="800"
+    android:toXDelta="0"
+    >
+</translate>
