--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -44,6 +44,8 @@
                     android:id="@+id/adView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentBottom="true"
                     ads:adSize="BANNER"
                     ads:adUnitId="@string/ad_id">
                 </com.google.android.gms.ads.AdView>
@@ -139,6 +141,7 @@
 
 
             <LinearLayout
+                android:id="@+id/setting"
                 android:layout_marginBottom="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
